--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -1,28 +1,33 @@
 .contacts__list {
-    display: flex;
-    margin-top: 0;
-    margin-bottom: 0;
-    gap: 50px;
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+  gap: 50px;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  background-color: var(--main-color);
 }
 
-.contacts__list {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+.contacts__item {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  gap: 10px;
 
-    background-color: var(--main-color);
-}
-
-.contacts__item .link:hover,
-.contacts__item .link:focus,
-.contacts__item .link:active {
+  & .link:hover,
+  & .link:focus,
+  & .link:active {
     color: var(--accent-color);
 
     transition: color var(--animation);
-}
+  }
 
-.contacts__item .link {
+  & .link {
     display: flex;
     text-decoration: none;
     padding-top: 32px;
@@ -31,42 +36,31 @@
     color: var(--secondary-color);
 
     transition: color var(--animation);
-}
-
-/* Contacts-icon */
-
-.contacts__item {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    gap: 10px;
+  }
 }
 
 .contacts__link {
-    color: var(--secondary-color);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 
-    transition: color var(--animation);
-}
+  color: var(--secondary-color);
 
-.contacts__link:hover,
-.contacts__link:focus,
-.contacts__link:active {
+  transition: color var(--animation);
+
+  &:hover,
+  &:focus,
+  &:active {
     color: var(--accent-color);
 
     transition: color var(--animation);
-}
-
-.contacts__link {
-    text-decoration: none;
-    display: flex;
-    align-items: center;
+  }
 }
 
 .contacts__icon {
-    display: block;
-    content: "";
-    fill: currentColor;
-    margin-right: 10px;
-    align-items: center;
+  display: block;
+  content: "";
+  fill: currentColor;
+  margin-right: 10px;
+  align-items: center;
 }
