--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,40 +1,42 @@
 .features {
-    padding-bottom: 94px;
-}
+@extend %section;
 
-.features__title {
+  padding-bottom: 94px;
+
+  &__title {
     margin-bottom: 10px;
 
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
-}
+  }
 
-.features__list {
+  &__list {
     display: flex;
     justify-content: center;
     gap: var(--indent);
-}
+  }
 
-.features__item {
+  &__item {
     width: 270px;
-}
+  }
 
-.features__thumb {
+  &__thumb {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 270px;
     height: 120px;
-    background-color: #F5F4FA;
+    background-color: #f5f4fa;
     border-radius: 4px;
     margin-bottom: 30px;
-}
+  }
 
-.features__text {
+  &__text {
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
+  }
 }
