--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,41 +14,42 @@
     gap: 50px;
 
     background-color: var(--main-color);
+
+    & .link:hover,
+        & .link:focus,
+        & .link:active {
+            color: var(--accent-color);
+            transition: color var(--animation);
+        }
+    
+        & .link {
+            color: var(--primary-text-color);
+    
+            transition: color var(--animation);
+        }
+    
+        & .link.current {
+            position: relative;
+    
+            color: var(--accent-color);
+        }
+    
+        & .link.current::after {
+            content: '';
+            position: absolute;
+    
+            left: 0;
+    
+            display: block;
+            width: 100%;
+            height: 4px;
+            top: 76px;
+    
+            border-radius: 2px;
+            background-color: var(--accent-color);
+        }
 }
 
-.nav__list .link:hover,
-.nav__list .link:focus,
-.nav__list .link:active {
-    color: var(--accent-color);
-    transition: color var(--animation);
-}
-
-.nav__list .link {
-    color: var(--primary-text-color);
-
-    transition: color var(--animation);
-}
-
-.nav__list .link.current {
-    position: relative;
-
-    color: var(--accent-color);
-}
-
-.nav__list .link.current::after {
-    content: '';
-    position: absolute;
-
-    left: 0;
-
-    display: block;
-    width: 100%;
-    height: 4px;
-    top: 76px;
-
-    border-radius: 2px;
-    background-color: var(--accent-color);
-}
 .nav__item .link {
     display: flex;
     text-decoration: none;
