--- a/sass/layout/_occupation.scss
+++ b/sass/layout/_occupation.scss
@@ -1,26 +1,25 @@
 .occupation {
-    padding-bottom: 94px;
-}
+  @extend %section;
 
-.occupation__title {
+  &__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.14;
     text-align: center;
     margin-bottom: 50px;
-}
+  }
 
-.occupation__list {
+  &__list {
     display: flex;
     justify-content: center;
     --items: 3;
-}
+  }
 
-.occupation__item {
+  &__item {
     position: relative;
-}
+  }
 
-.occupation__img {
+  &__img {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -33,9 +32,9 @@
     height: 70px;
 
     background: rgba(47, 48, 58, 0.8);
-}
+  }
 
-.occupation__text {
+  &__text {
     font-size: 14px;
     font-weight: 700;
     line-height: 16px;
@@ -44,4 +43,5 @@
     text-transform: uppercase;
 
     color: var(--main-color);
+  }
 }
