--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,14 +1,15 @@
-.project__wrapper {
+.project {
+  &__wrapper {
     border-top: none;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 24px;
     padding-right: 24px;
 
-    border: 1px solid #EEEEEE;
-}
+    border: 1px solid #eeeeee;
+  }
 
-.project__title {
+  &__title {
     margin-bottom: 4px;
 
     font-weight: 700;
@@ -16,51 +17,23 @@
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--primary-text-color);
-}
+  }
 
-.project__link {
-    display: block;
-    text-decoration: none;
-
-    transition: box-shadow var(--animation);
-}
-.project__list{
-    display: flex;
-    justify-content: center;
-}
-.project__item:hover,
-.project__item:focus,
-.project__link:hover,
-.project__link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-
-    transition: box-shadow var(--animation);
-}
-
-.project__text {
+  &__text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
     color: var(--secondary-color);
-}
+  }
 
-.project__container {
+  &__container {
     display: flex;
     position: relative;
     overflow: hidden;
     transition: transform var(--animation);
-}
+  }
 
-.project__link:hover .project__overlay,
-.project__link:focus .project__overlay {
-    transition: transform var(--animation);
-    transform: translateY(0);
-    opacity: 1;
-
-}
-
-
-.project__overlay {
+  &__overlay {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -78,10 +51,9 @@
     height: 100%;
 
     background-color: rgba(33, 150, 243, 0.9);
+  }
 
-}
-
-.project__description {
+  &__description {
     padding: 63px 24px;
 
     width: 370px;
@@ -94,4 +66,37 @@
     letter-spacing: 0.03em;
     color: var(--main-color);
     user-select: none;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.project__link {
+  display: block;
+  text-decoration: none;
+
+  transition: box-shadow var(--animation);
+
+  &:hover .project__overlay,
+  &:focus .project__overlay {
+    transition: transform var(--animation);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.project__item:hover,
+.project__item:focus,
+.project__link:hover,
+.project__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+  transition: box-shadow var(--animation);
 }
