--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,88 +1,90 @@
 .team {
-    background-color: var(--backround-btncolor);
-}
+  @extend %section;
 
-.team__title {
+  background-color: var(--backround-btncolor);
+
+  &__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.14;
     text-align: center;
     margin-bottom: 50px;
-}
+  }
 
-.team__name {
+  &__name {
     margin-bottom: 10px;
 
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
-}
+  }
 
-.team__wrapper {
+  &__wrapper {
     border-top: none;
     padding-top: 30px;
     padding-bottom: 30px;
     padding-left: 5px;
     padding-right: 5px;
-}
+  }
 
-.team__list {
+  &__list {
     display: flex;
     justify-content: center;
     gap: var(--indent);
-}
+  }
 
-.team__item {
+  &__item {
     background-color: var(--main-color);
-    flex-basis: calc(100% - var(--indent) *(var(--items) - 1)) /var(--items);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    flex-basis: calc(100% - var(--indent) * (var(--items) - 1)) / var(--items);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-}
+  }
 
-.team__text {
+  &__text {
     line-height: 1.18;
     text-align: center;
     margin-bottom: 16px;
     color: var(--secondary-color);
-}
+  }
 
-/* Socials-icon*/
-.team__social {
+  &__social {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
+  }
+
+  &__icon {
+    fill: #afb1b8;
+    transition: fill var(--animation);
+  }
 }
 
 .team__links {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
-    background-color: var(--main-color);
-    border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--main-color);
+  border-radius: 50%;
 
-    transition: background-color var(--animation), fill var(--animation);
-}
+  transition: background-color var(--animation), fill var(--animation);
 
-.team__icon {
-    fill: #AFB1B8;
-    transition: fill var(--animation);
-}
-
-.team__links:hover,
-.team__links:focus,
-.team__links:active {
+  &:hover,
+  &:focus,
+  &:active {
     background-color: var(--accent-color);
 
     transition: background-color var(--animation);
-}
+  }
 
-.team__links:hover .team__icon,
-.team__links:focus .team__icon {
-    fill: #FFFFFF;
+  &:hover .team__icon,
+  &:focus .team__icon {
+    fill: #ffffff;
 
     transition: fill var(--animation);
+  }
 }
